[gd_scene load_steps=5 format=3 uid="uid://dk2wj8bmajkf0"]

[ext_resource type="Script" path="res://Scripts/Ventanas/Ventana.gd" id="1_tgup3"]
[ext_resource type="Texture2D" uid="uid://35sp7vgsy047" path="res://Sprites/Barras de titulo/ventanaArriba.png" id="2_i54jj"]
[ext_resource type="Texture2D" uid="uid://c4lo25y8ltr37" path="res://Sprites/Fondos/9x9.png" id="3_xnedt"]
[ext_resource type="PackedScene" uid="uid://be81yo730xtn5" path="res://Escenas/Elementos Ventanas/Archivo.tscn" id="4_lq0ls"]

[node name="Ventana" type="Control" groups=["Ventana"]]
texture_filter = 1
custom_minimum_size = Vector2(620, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 460.0
offset_bottom = 320.0
mouse_force_pass_scroll_events = false
script = ExtResource("1_tgup3")

[node name="BarraTitulo" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(620, 20)
layout_mode = 2
offset_right = 620.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
texture = ExtResource("2_i54jj")
region_rect = Rect2(0, 0, 129, 16)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 52
axis_stretch_vertical = 2

[node name="Cuerpo" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(620, 300)
layout_mode = 2
offset_top = 20.0
offset_right = 620.0
offset_bottom = 320.0
mouse_filter = 1
texture = ExtResource("3_xnedt")
region_rect = Rect2(0, 0, 9, 9)
patch_margin_left = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Cuerpo"]
custom_minimum_size = Vector2(612, 300)
layout_mode = 2
offset_right = 620.0
offset_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 0
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Cuerpo/ScrollContainer"]
custom_minimum_size = Vector2(612, 300)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
columns = 8

[node name="Archivo" parent="Cuerpo/ScrollContainer/GridContainer" instance=ExtResource("4_lq0ls")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="BarraTitulo" to="." method="_on_barra_titulo_gui_input"]
[connection signal="mouse_entered" from="BarraTitulo" to="." method="_on_barra_titulo_mouse_entered"]
[connection signal="mouse_exited" from="BarraTitulo" to="." method="_on_barra_titulo_mouse_exited"]
